# notes

./: alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/ai/: answers.py
app/dependencies/: auth.py  database.py
app/migrations/: env.py
app/migrations/versions/: 00c092fb6c47_create_tables_with_uuid.py  4c43306b68e2_init.py  6770224f968d_create_users_and_notes_tables.py
app/models/: note.py  user.py
app/routes/: __init__.py  ai.py  auth.py  note.py
app/schemas/: note.py  user.py
app/utils/: hash.py  jwt.py  response.py
